--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,10 +12,18 @@
 
   <title>سامانه واحدیار</title>
 
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom fonts for this template-->
+  <link href="{% static 'core/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'core/css/main.css' %}" rel="stylesheet" type="text/css">
+  
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
 
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <!-- Custom styles for this template-->
+  <link href="{% static 'core/css/style.css' %}" rel="stylesheet">
+  
+  {% block stylesheet %}{% endblock %}
 
 </head>
 
@@ -103,16 +112,17 @@
         </div>
       </div>
       <div class="col-md-6 displaynonepic" style="margin-top: 10%;">
-        <img class="w-100" src="img/loginp.png" />
+        <img class="w-100" src="{% static 'core/img/loginp.png' %}" />
       </div>
 
     </div>
   </div>
 
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  
+  
+  <script src="{% static 'core/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
 
   <script>
