--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -152,25 +152,22 @@
 
           <div class="row text-center">
 
-            <div class="col-xl-6 col-md-6 mb-4">
-              <div class="card shadow my-4">
-                <div class="card-body">
-                  <div class=" py-5 pb-2">
-                    <a>مهندسی کامپیوتر</a>
-                  </div>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-xl-6 col-md-6 mb-4">
-              <div class="card shadow my-4">
-                <div class="card-body">
-                  <div class=" py-5 pb-2">
-                    <a>مهندسی کامپیوتر</a>
+            {% for study in studies %}
+
+              <div class="col-xl-6 col-md-6 mb-4">
+                <div class="card shadow my-4">
+                  <div class="card-body">
+                    <div class=" py-5 pb-2">
+                      <a> {{study.degree}}
+                          {{study.chart}}
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
+
+            {% endfor %}
 
           </div>
 
