--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -44,32 +44,32 @@
       
 
       <li class="nav-item active">
-        <a class="nav-link text-right" href="index.html">
+        <a class="nav-link text-right" href="{% url 'index'%}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>پیشخوان تحصیلات</span></a>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link text-right" href="panel.html">
+        <a class="nav-link text-right" href="{% url 'dashboard' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>داشبورد</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link text-right" href="CourseList.html">
+        <a class="nav-link text-right" href="{% url 'courseList' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>لیست دروس من</span></a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link text-right" href="CourseSituation.html">
+        <a class="nav-link text-right" href="{% url 'courseSituation' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>وضعیت دروس</span></a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link text-right" href="CourseAssistant.html">
+        <a class="nav-link text-right" href="{% url 'courseAssistant' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>دستیار اخذ درس</span></a>
       </li>
