--- a/core/templates/core/panel.html
+++ b/core/templates/core/panel.html
@@ -81,4 +81,9 @@
   </div>
 
 </div>
+
+
+ 
+  <script src="static/core/vendor/chart.js/Chart.min.js"></script>
+  <script src="static/core/js/demo/chart-pie-demo.js"></script>
 {% endblock content %}
