--- a/core/templates/core/CourseSituation.html
+++ b/core/templates/core/CourseSituation.html
@@ -184,6 +184,16 @@
         </div>
 
 
+<script src="static/core/vendor/jquery/jquery.min.js"></script>
+<script>
+  //cs
+  $(".tbtn").on("click",function () {
+    $(this).parents(".custom-table").find(".toggler1").removeClass("toggler1");
+    $(this).parents("tbody").find(".toggler").addClass("toggler1");
+    $(this).parents(".custom-table").find(".fa-minus-circle").removeClass("fa-minus-circle");
+    $(this).parents("tbody").find(".fa-plus-circle").addClass("fa-minus-circle");
+});
 
+</script>
 
  {% endblock content %}
