--- a/core/templates/core/panel.html
+++ b/core/templates/core/panel.html
@@ -70,7 +70,7 @@
           <h6 class="m-0 font-weight-bold text-primary">معدل کل تا کنون</h6>
         </div>
 
-        <div class="card-body">
+        <div class="card-body" style="min-height:19.8em;">
           <div >
             <div>14.5</div>
           </div>
