--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -31,7 +31,7 @@
 
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion pr-0" id="accordionSidebar">
 
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -42,7 +42,7 @@
 
       <li class="nav-item active">
         <a class="nav-link text-right" href="{% url 'index'%}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-landmark"></i>
           <span>پیشخوان تحصیلات</span></a>
       </li>
 
@@ -53,21 +53,21 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link text-right" href="{% url 'courseList' %}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-list-alt"></i>
           <span>لیست دروس من</span></a>
       </li>
 
 
       <li class="nav-item active">
         <a class="nav-link text-right" href="{% url 'courseSituation' %}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+            <i class="fas fa-fw fa-tasks"></i>
           <span>وضعیت دروس</span></a>
       </li>
 
 
       <li class="nav-item active">
         <a class="nav-link text-right" href="{% url 'courseAssistant' %}">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fab fa-fw fa-hire-a-helper"></i>
           <span>دستیار اخذ درس</span></a>
       </li>
 
@@ -153,7 +153,7 @@
 
             {% for study in studies %}
 
-              <div class="col-xl-6 col-md-6 mb-4">
+              <div class="col-xl-4 col-md-6 mb-4">
                 <div class="card shadow my-4">
                   <div class="card-body">
                     <div class=" py-5 pb-2">
@@ -207,7 +207,7 @@
 
 
   <!-- Custom scripts for all pages-->
-  <script src="{% static 'core/js/sb-admin-2.min.js' %}"></script>
+  <script src="{% static 'core/js/sb-admin-2.js' %}"></script>
 
 </body>
 
