--- a/core/templates/core/panel.html
+++ b/core/templates/core/panel.html
@@ -3,7 +3,8 @@
 {% endblock title %}
 
 {% block edu %}
-مهندسی کامپیوتر
+{{ study.get_degree_display }}
+{{ study.chart }}
 {% endblock edu %}
 
 {% block content %}
