--- a/core/templates/core/CourseList.html
+++ b/core/templates/core/CourseList.html
@@ -37,8 +37,16 @@
                             <td>{{course.title}} </td>
                             <td>{{course.vahed_nazari}}</td>
                             <td>{{course.vahed_amali}}</td>
+                            {% if course.corequisite_courses != 'core.Course.None' %}
                             <td>{{course.corequisite_courses}}</td>
+                            {% else %}
+                            <td></td>
+                            {% endif %}
+                            {% if course.prerequisite_courses %}
                             <td>{{course.prerequisite_courses}}</td>
+                            {% else %}
+                            <td></td>
+                            {% endif %}
                         </tr>
                       {% endif %}
                       {% endfor %}
