--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -48,7 +48,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-lg-12">
-                <form id="login-form" action="https://phpoll.com/login/process" method="post" role="form"
+                <form id="login-form" action={% url 'login' %} method="post" role="form"
                   style="display: block;">
                   <div class="form-group mx-3">
                     <input type="text" name="username" id="username" tabindex="1" class="form-control"
