--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -170,7 +170,7 @@
         </div>
           <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">لغو</button>
-          <a class="btn btn-primary" href="login.html">خروج</a>
+          <a class="btn btn-primary" href={% url 'logout' %} >خروج</a>
         </div>
       </div>
     </div>
