dynamic course situation

--- a/core/templates/core/CourseList.html
+++ b/core/templates/core/CourseList.html
@@ -59,7 +59,7 @@
                       </tr>
                       {% for course in courses %}
                       {% if course.course_type == 2 %}
-                        <tr class="toggler toggler1">
+                        <tr class="toggler">
                             <td>{{course.title}} </td>
                             <td>{{course.vahed_nazari}}</td>
                             <td>{{course.vahed_amali}}</td>
@@ -76,7 +76,7 @@
                       </tr>
                       {% for course in courses %}
                       {% if course.course_type == 3 %}
-                        <tr class="toggler toggler1">
+                        <tr class="toggler">
                             <td>{{course.title}} </td>
                             <td>{{course.vahed_nazari}}</td>
                             <td>{{course.vahed_amali}}</td>
@@ -93,7 +93,7 @@
                       </tr>
                       {% for course in courses %}
                       {% if course.course_type == 4 %}
-                        <tr class="toggler toggler1">
+                        <tr class="toggler">
                             <td>{{course.title}} </td>
                             <td>{{course.vahed_nazari}}</td>
                             <td>{{course.vahed_amali}}</td>
