change main js name

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -207,7 +207,7 @@
 
 
   <!-- Custom scripts for all pages-->
-  <script src="{% static 'core/js/sb-admin-2.js' %}"></script>
+  <script src="{% static 'core/js/main.js' %}"></script>
 
 </body>
 
