--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -185,7 +185,7 @@
   
   
   
-  <script src=" {% static 'core/js/sb-admin-2.js' %}"></script>
+  <script src=" {% static 'core/js/main.js' %}"></script>
  
   
 </body>
