--- a/core/templates/core/first-time-form.html
+++ b/core/templates/core/first-time-form.html
@@ -26,12 +26,15 @@
                             </div>
                             <div class="form-group row">
                                     <label for="inputState">دانشگاه</label>
+                                     
                                     <select id="inputState" class="form-control">
+                                    
                                       <option selected>انتخاب کنید</option>
-                                      <option>تهران شمال</option>
-                                      <option>تهران غرب</option>
-
+                                      {% for university in universities %}
+                                        <option>{{university.name}} </option>
+                                      {% endfor %}
                                     </select>
+                                    
                             </div>
                             
                             <div class="form-group row">
