--- a/core/templates/core/panel.html
+++ b/core/templates/core/panel.html
@@ -83,8 +83,8 @@
 
 </div>
 
-
+{% comment %} 
  
   <script src="static/core/vendor/chart.js/Chart.min.js"></script>
-  <script src="static/core/js/demo/chart-pie-demo.js"></script>
+  <script src="static/core/js/demo/chart-pie-demo.js"></script> {% endcomment %}
 {% endblock content %}
