--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -161,13 +161,13 @@ sup {
 }
 
 a {
-  color: #4e73df;
+  color: #fff !important;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #224abe;
+  color: #fff !important;
   text-decoration: underline;
 }
 
