--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -202,12 +202,15 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 
   <!-- Custom scripts for all pages-->
   <script src="{% static 'core/js/main.js' %}"></script>
+  
+  <script src="{% static 'core/vendor/chart.js/Chart.min.js' %}"></script>
+  <script src="{% static 'core/js/demo/chart-pie-demo.js' %}"></script>
 
 </body>
 
