--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -187,6 +187,8 @@
   
   <script src=" {% static 'core/js/main.js' %}"></script>
  
+  <script src="{% static 'core/vendor/chart.js/Chart.min.js' %}"></script>
+  <script src="{% static 'core/js/demo/chart-pie-demo.js' %}"></script>
   
 </body>
 
