cm slidebar toggle

--- a/core/templates/core/first-time-form.html
+++ b/core/templates/core/first-time-form.html
@@ -3,7 +3,6 @@
 {% endblock title %}
 
 {% block edu %}
-مهندسی کامپیوتر
 {% endblock edu %}
 
 {% block content %}
@@ -11,7 +10,7 @@
                 <div class="container-fluid">
 
                     <div class="text-right mb-4">
-                        <h1 class="h3 mb-5 text-gray-800">اینو پرش کن </h1>
+                        <h1 class="h3 mb-5 text-gray-800">به سامانه  واحدیار خوش آمدید،لطفا برای شروع فرم زیر را پر نمایید.</h1>
                     </div>
 
                     <div class="row text-center">
@@ -56,8 +55,8 @@
                                     </select>
                             </div>
                             <div class="form-group row">
-                                <div class="col-sm-10">
-                                    <button type="submit" class="btn btn-primary"> تایید </button>
+                                <div class="col-sm-12">
+                                    <button type="submit" class="btn btn-primary"> تکمیل اطلاعات </button>
                                 </div>
                             </div>
                         </form>
