--- a/core/templates/core/panel.html
+++ b/core/templates/core/panel.html
@@ -73,7 +73,7 @@
 
         <div class="card-body" style="min-height:19.8em;">
           <div >
-            <div>14.5</div>
+            <div style="font-size: 10em;">14.5</div>
           </div>
         </div>
       </div>
