--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -47,36 +47,36 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link text-right">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+        <a class="nav-link text-right" style="color: #D3D3D3 !important;">
+          <i class="fas fa-fw fa-tachometer-alt" style="color: #D3D3D3 !important;"></i>
           <span>داشبورد</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link text-right">
-          <i class="fas fa-fw fa-list-alt"></i>
+        <a class="nav-link text-right" style="color: #D3D3D3 !important;">
+          <i class="fas fa-fw fa-list-alt" style="color: #D3D3D3 !important;"></i>
           <span>لیست دروس من</span></a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link text-right">
-            <i class="fas fa-fw fa-tasks"></i>
+        <a class="nav-link text-right" style="color: #D3D3D3 !important;">
+            <i class="fas fa-fw fa-tasks" style="color: #D3D3D3 !important;"></i>
           <span>وضعیت دروس</span></a>
       </li>
 
 
       <li class="nav-item active">
-        <a class="nav-link text-right">
-          <i class="fab fa-fw fa-hire-a-helper"></i>
+        <a class="nav-link text-right" style="color: #D3D3D3 !important;">
+          <i class="fab fa-fw fa-hire-a-helper" style="color: #D3D3D3 !important;"></i>
           <span>دستیار اخذ درس</span></a>
       </li>
 
 
       <hr class="sidebar-divider">
 
-      <div class="text-center d-none d-md-inline">
+      {% comment %} <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
-      </div>
+      </div> {% endcomment %}
 
     </ul>
 
@@ -202,15 +202,15 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 
   <!-- Custom scripts for all pages-->
   <script src="{% static 'core/js/main.js' %}"></script>
-  
+{% comment %}   
   <script src="{% static 'core/vendor/chart.js/Chart.min.js' %}"></script>
-  <script src="{% static 'core/js/demo/chart-pie-demo.js' %}"></script>
+  <script src="{% static 'core/js/demo/chart-pie-demo.js' %}"></script> {% endcomment %}
 
 </body>
 
