--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -77,9 +77,9 @@
 
       <hr class="sidebar-divider">
 
-      <div class="text-center d-none d-md-inline">
+      {% comment %} <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
-      </div>
+      </div> {% endcomment %}
 
     </ul>
 
@@ -122,7 +122,7 @@
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">
                     وقت بخیر{{ user.username }}!
                  </span>
@@ -178,7 +178,7 @@
     </div>
   </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
 
   {% comment %} <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script> {% endcomment %}
   <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
